--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular": "~1.4.0",
     "lodash": "~3.10.1",
     "angular-utils-pagination": "~0.8.3",
-    "fontawesome": "~4.4.0"
+    "fontawesome": "~4.4.0",
+    "ngScrollSpy": "~1.0.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
